--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
-	url = https://github.com/egomezbpedro/nvim-conf
+	url = https://github.com/egomezbpedro/nvim-conf.git
