--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,8 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Shift Alt vim keys to switch windows
-bind -n M-H previous-window
-bind -n M-L next-window
+bind -n M-h previous-window
+bind -n M-l next-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
