--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,15 @@ set -g mouse on
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
+bind r source-file ~/.tmux.conf
+
+bind-key -r i run-shell "tmux neww ~/.local/bin/cht.sh"
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
+
 
 # Vim style pane selection
 bind h select-pane -L
-bind j select-pane -D 
+bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
@@ -17,19 +22,15 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Shift Alt vim keys to switch windows
-bind -n M-h previous-window
-bind -n M-l next-window
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-left-icon session
+set -g @dracula-show-fahrenheit false
+set -g @dracula-battery-label "Battery"
 
-set -g @tmux-gruvbox 'dark' # or 'light'
-
-# set vi-mode
 set-window-option -g mode-keys vi
 
 # keybindings
