--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set -g mouse on
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux/.tmux.conf
 
 bind-key -r i run-shell "tmux neww ~/.local/bin/cht.sh"
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
