--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,7 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
