--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
+set -g history-limit 5000
+
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
@@ -8,7 +10,7 @@ bind r source-file ~/.tmux.conf
 
 bind-key -r i run-shell "tmux neww ~/.local/bin/cht.sh"
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
-
+bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # Vim style pane selection
 bind h select-pane -L
@@ -21,16 +23,26 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+setw -g automatic-rename on
+set -g status-interval
 
+# PLUGINS
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-dir '~/.local/state/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-save-interval '1'
+set -g @continuum-restore 'on'
+
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'dracula/tmux'
-set -g @dracula-show-left-icon session
-set -g @dracula-show-fahrenheit false
-set -g @dracula-battery-label "Battery"
+
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavor 'mocha'
+
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
 set-window-option -g mode-keys vi
 
@@ -39,7 +51,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind 'h' split-window -v -c "#{pane_current_path}"
+bind 'v' split-window -h -c "#{pane_current_path}"
 
 run '~/.tmux/plugins/tpm/tpm'
